modal fix overflow

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -207,6 +207,7 @@
     z-index: 1000;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
             visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                overflow-y: auto;
 }
 .modal{
     max-width: 335px;
@@ -219,6 +220,7 @@
     position: absolute;
     padding: 40px 20px;
     height: auto;
+    overflow-y: auto;
 }
 .backdrop.is-hidden {
     opacity: 0;
